package Recharge;
//请求充值协议：17--9662  领取将领协议：17--9663 通用 ServerResultInt
message	ToClientRechargeInfo
{
	optional int64 startTime = 1;				//连续充值活动结束时间
	optional int64 endTime = 2;				//连续充值活动结束时间
	optional int32 day = 3;					//连续充值天数
	optional int32 maxDay = 4;				//连续充值最多天数
	repeated int64 item = 5;				//奖励状态 高32位 为ID 低32 位为状态（0为不可领取 1 为可领取 2为已经领取）
}

message	ToDBRechargeInfo
{
	optional int64 endTime = 1;				//连续充值活动结束时间
	optional int32 day = 2;					//连续充值天数
	optional int32 maxDay = 3;				//连续充值最多天数
	repeated int64 item = 4;				//奖励状态 高32位 为ID 低32 位为状态（0为不可领取 1 为可领取 2为已经领取）
}
